# projektpraktikum-datascience

./: .gitignore  Exploration_transactions.ipynb  Fragen_15_04_Zoom.txt  LICENSE  Projektauftrag_Entwurf_1.docx  Projektauftrag_Version_2.docx  Projektauftrag_Version_3.docx  Protokoll Zoom 10.4.25.docx  Präsentation_Bald.pptx  Präsentation_Projektauftrag.pptx  README.md  RetailAnalyttics_SB_Kassen_Praesentation.pptx  modell_matthias.ipynb  modell_matthias_V2.ipynb  table-comments.json
analyze/: analyse-daytime.ipynb  analyse-feedback.ipynb  analyse-tagebuch.md  analyse.ipynb  analyse_join_lines_products.ipynb  analyse_join_transactions_and_lines.ipynb  analyse_join_transactions_and_stores.ipynb  analyse_missing_values_customer_feedback.ipynb  analyze_joined.ipynb  camera_detected_frauds.ipynb  camera_metrics_over_time.ipynb  chi2_test_customer_satisfaction.py  create_join_table.py  one_hot_encode.py  produktkategorien.ipynb  pyproject.toml  rabatt_fraud.ipynb  requirements.txt  warenkorb_analse.ipynb
api/: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  pyproject.toml  requirements.txt  rest-api-specification.md
api/app/: datastore.py  main.py  schemas.py  version.py
api/app/model/: __init__.py  ml_model.py  model.py  staticrules.py  transform.py
api/data/: products.csv  stores.csv
api/models/: encoder.json  xgb_damage_regressor.joblib  xgb_fraud_classifier.joblib
api/scripts/: generate_test_data.py  make_api_call.py  predict_from_files.py  skeleton.py
api/tests/: test_config.toml  test_fraud_detection.py  test_health.py  test_transformed_dataframe.py.bak
api/tests/json/: valid.json  (+7 more)
fraud-detection/: .gitignore  README.md  bew.csv  main.py  model_comparison copy.csv  model_comparison.csv  model_comparison_2.csv  model_metrics_grand_comparison.csv  model_metrics_grand_comparison_all.csv  models.md  neuralnet_clf.db  pyproject.toml  sampler.pkl
fraud-detection/csv/: csv.md
fraud-detection/data/: data.md
fraud-detection/notebooks/: catboost_explore.ipynb  classifier_optimize_cost_fp.ipynb  classifier_optimize_cost_fp_mean_damage_only.ipynb  classifier_optimize_threshold.ipynb  classifier_threshold.ipynb  clf_only_vorhersage_modelergebnis.ipynb  combined_model.ipynb  combined_model_calibrated.ipynb  combined_model_eval_damage_predictions.ipynb  compare_models copy.ipynb  compare_models plots.ipynb  compare_models.ipynb  compare_models_drop.ipynb  embeddings.ipynb  final_model_rabatte.ipynb  hyperparam_search.ipynb  hyperparam_search1.ipynb  hyperparam_search_knn.ipynb  hyperparam_search_lgbm.ipynb  hyperparam_search_nn.ipynb  hyperparam_search_regression.ipynb  kalibrierung.ipynb  linear_model.ipynb  neuralnet_clf.db  regression.ipynb  regression_neuralnetwork.ipynb  regression_separiert.ipynb  select_clf_features.ipynb  shad_nn.ipynb  shap_xgboost.ipynb  shap_xgboost_reg.ipynb  summary.ipynb  train_final_models.ipynb  vorhersage_modelergebnis.ipynb  vorhersage_modelergebnis_calibrated.ipynb
fraud-detection/optan/: optan.md
fraud-detection/plots/: plots.md
fraud-detection/studys/: xgboost_1.md  xgboost_reg.md
(+108 files in other folders)
