[project]
name = "fraud-detection-api"
version = "0.1.2"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "joblib>=1.5.1",
    "numpy>=2.2.6",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "shap>=0.48",
    "uvicorn>=0.34.3",
    "xgboost-cpu>=3.0.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
